--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@
         <thead>
           <tr>
             <th class="sorting_disabled" rowspan="1" colspan="1" style="width: 0px;">Document/Patent number</th>
-            <th class="sorting_disabled" rowspan="1" colspan="1" style="width: 0px;">Display</th>
             <th class="sorting_disabled" rowspan="1" colspan="1" style="width: 0px;">Title</th>
             <th class="sorting_disabled" rowspan="1" colspan="1" style="width: 0px;">Inventor name</th>
             <th class="sorting_disabled" rowspan="1" colspan="1" style="width: 0px;">Publication date</th>
@@ -81,85 +80,73 @@
         </thead>
         <tbody>
           <tr class="odd">
-            <td>US-3254810-A</td>
-            <td>link to pdf</td>
+            <td><a href="/files/3254810.pdf">U.S. Patent 3,254,810</a></td>
             <td>Container latching system</td>
             <td>STERRETT VANCE C</td>
             <td>1966-06-07</td>
           </tr>
           <tr class="even">
-            <td>US-3145728-A</td>
-            <td>link</td>
+            <td><a href="/files/3145728.pdf">U.S. Patent 3,145,728</a></td>
             <td>Water feed control valve for watering troughs</td>
             <td>STERRETT VANCE C et al.</td>
             <td>1964-08-25</td>
           </tr>
           <tr class="odd">
-            <td>US-3060882-A</td>
-            <td>link</td>
+            <td><a href="/files/3060882.pdf">U.S. Patent 3,060,882</a></td>
             <td>Automatic boat drain</td>
             <td>PETERS WILLIAM H et al.</td>
             <td>1962-10-30</td>
           </tr>
           <tr class="even">
-            <td>US-3047004-A</td>
-            <td>link</td>
+            <td><a href="/files/3047004.pdf">U.S. Patent 3,047,004</a></td>
             <td>Proportioner and mixer, and tumbling differential for controlling the action thereof</td>
             <td>STERRETT VANCE C</td>
             <td>1962-07-31</td>
           </tr>
           <tr class="odd">
-            <td>US-2946343-A</td>
-            <td>link</td>
+            <td><a href="/files/2946343.pdf">U.S. Patent 2,946,343</a></td>
             <td>Valve construction</td>
             <td>STERRETT VANCE C et al.</td>
             <td>1960-07-26</td>
           </tr>
           <tr class="even">
-            <td>US-2810396-A</td>
-            <td>link</td>
+            <td><a href="/files/2810396.pdf">U.S. Patent 2,810,396</a></td>
             <td>Differential float controlled valve</td>
             <td>STERRETT VANCE C</td>
             <td>1957-10-22</td>
           </tr>
           <tr class="odd">
-            <td>US-2645513-A</td>
-            <td>link</td>
+            <td><a href="/files/2645513.pdf">U.S. Patent 2,645,513</a></td>
             <td>Cylinder construction</td>
             <td>STERRETT VANCE C</td>
             <td>1953-07-14</td>
           </tr>
           <tr class="even">
-            <td>US-2603191-A</td>
-            <td>link</td>
+            <td><a href="/files/2603191.pdf">U.S. Patent 2,603,191</a></td>
             <td>Percussion cylinder</td>
             <td>STERRETT VANCE C</td>
             <td>1952-07-15</td>
           </tr>
           <tr class="odd">
-            <td>US-2574299-A</td>
-            <td>link</td>
+            <td><a href="/files/2574299.pdf">U.S. Patent 2,574,299</a></td>
             <td>Piston construction</td>
             <td>STERRETT VANCE C</td>
             <td>1951-11-06</td>
           </tr>
           <tr class="even">
-            <td>US-2493602-A</td>
-            <td>link</td>
+            <td><a href="/files/2493602.pdf">U.S. Patent 2,493,602</a></td>
             <td>Pressure fluid motor</td>
             <td>STERRETT VANCE C</td>
             <td>1950-01-03</td>
           </tr>
           <tr class="odd">
-            <td>US-2487490-A</td>
-            <td>link</td>
+            <td><a href="/files/2487490.pdf">U.S. Patent 2,487,490</a></td>
             <td>Float valve</td>
             <td>STERRETT VANCE C</td>
             <td>1949-11-08</td>
           </tr>
           <tr class="even">
-            <td>US-2026428-A</td>
-            <td>link</td>
+            <td><a href="/files/2026428.pdf">U.S. Patent 2,026,428</a></td>
             <td>Burial vault</td>
             <td>EMANUEL MURPHY et al.</td>
             <td>1935-12-31</td>
